# aiMusic

./: .gitignore  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
android-native/: MIGRATION.md  PARITY_PLAN.md  README.md  settings.gradle.kts
android-native/app/: build.gradle.kts  proguard-rules.pro
android-native/app/src/main/: AndroidManifest.xml
android-native/native-bridge/: Cargo.toml
android-native/native-bridge/src/: lib.rs
android-native/native-bridge/src/ai/: mod.rs
android-native/native-bridge/src/audio/: mod.rs  transition.rs
android-native/native-bridge/src/netease/: mod.rs
docs/: apple-music-lyrics-parity.md
scripts/: build-android-native-bridge.ps1  build-android-native.ps1  build-tauri.mjs  check-android-native-env.ps1  verify-apple-lyrics.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: cdn.rs  lib.rs  main.rs  media_export.rs  proxy.rs
src-tauri/src/ai/: cmds.rs  config.rs  deepseek.rs  mod.rs  openai_compat.rs
src-tauri/src/audio/: analysis.rs  cache.rs  cmds.rs  mod.rs  scheme.rs
src-tauri/src/cache/: cmds.rs  db.rs  mod.rs
src-tauri/src/netease/: api.rs  client.rs  cmds.rs  crypto.rs  mod.rs  models.rs
src-tauri/tests/: netease_probe.rs
src/app/: globals.css  layout.tsx  page.tsx  template.tsx
src/app/dev/apple-lyrics/: AppleLyricsVerificationScene.fixture.tsx  AppleLyricsVerificationScene.stub.tsx  AppleLyricsVerificationScene.tsx  (+1 more)
src/app/distill/: page.tsx
src/app/export/: page.tsx
src/app/login/: page.tsx
src/app/settings/: page.tsx
src/app/taste/: page.tsx
src/components/: AdaptiveDotField.tsx  AiCoverCaption.tsx  AiPet.css  AiPet.tsx  AnalysisAutoResume.tsx  AppIcon.tsx  BackButton.tsx  DotField.tsx  DotText.tsx  Nav.tsx  PlatformTag.tsx  PlayerCard.tsx  PlaylistFusionBg.tsx  PlaylistPager.tsx  SmartSessionPlanner.tsx  Waveform.tsx  WindowResizer.tsx
src/lib/: acoustic-summary.ts  ai-announcer.ts  ai-json.ts  amll-ttml.ts  analysis-progress.ts  app-settings.ts  audio-analysis.ts  audio-scheduler.ts  beat-grid.ts  behavior-log.ts  candidate-ranker.ts  candidate-recall.ts  cdn.ts  context.ts  cover-color.ts  discovery.ts  gapless-engine.ts  library-analysis.ts  library.ts  lrc.ts  mix-planner.ts  music-intent.ts  pet-agent.ts  pet-memory.ts  player-state.tsx  recommendation-log.ts  semantic-indexer.ts  semantic-recall.ts  smooth-queue.ts  tag-recall.ts  taste-profile.ts  tauri.ts  track-dedupe.ts  track-semantic-profile.ts  transition-judge.ts  transition-score.ts  use-is-desktop.ts  use-platform.ts  weather.ts  yrc.ts
src/types/: apple-lyrics-fixture.d.ts
tools/netease-export-test/: Cargo.toml  README.md
tools/netease-export-test/src/: main.rs
tools/netease-export-test/src/netease/: mod.rs
(+159 files in other folders)
