[package]
name = "claudio"
version = "0.1.0"
description = "An AI radio distilled from your own playlists."
edition = "2021"
rust-version = "1.77"

[lib]
name = "claudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# netease client
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
anyhow = "1"
thiserror = "1"
# weapi 加密
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding"] }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
url = "2"

# 本地缓存（歌单 / 曲目 / 歌词 / kv 状态）
# `bundled` 把 sqlite3 编译进来，不依赖系统 libsqlite。
rusqlite = { version = "0.32", features = ["bundled"] }

# Windows 专用：把原生标题栏拿掉但保留右上角 min/max/close 三个按钮，
# 让窗口呈"borderless + native traffic-light"效果。
# macOS 用 tauri.conf.json 里 titleBarStyle: "Overlay" 已经天然支持，不需要这个。
[target.'cfg(windows)'.dependencies]
tauri-plugin-decorum = "1.1"
