[package]
name = "pipo_native_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "pipo_native_bridge"
crate-type = ["cdylib"]

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding"] }
cookie_store = "0.21"
hex = "0.4"
jni = "0.21"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats", "opt-simd"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
