[package]
name = "netease-export-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding"] }
cookie_store = "0.21"
hex = "0.4"
md5 = "0.7"
num-bigint = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "gzip"] }
reqwest_cookie_store = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
url = "2"
